- Fixed horizontal scroll on home page - fixed buttons on resources_overview

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,13 @@
 /* General Styles */
 html, body {
-    position: fixed;
+
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     width: 100%;
     box-sizing: border-box;
     overflow-x: hidden; /* Prevent horizontal scrolling */
-    padding-top: 0px; /* Adjust this value based on the height of the navbar */
+    overscroll-behavior: contain; /*controls bouncing effect*/
 }
 
 .content {
@@ -16,14 +16,17 @@ html, body {
 
 /* Navbar */
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
     justify-content: flex-end; /* Space between items */
     align-items: center; /* Vertically center items */
     background-color: #333;
     color: white;
-    padding: 10px 20px; /* Adjust padding for spacing */
-    box-sizing: border-box; /* Ensure padding is included in the total width */
-    overscroll-behavior: none; /* Prevent the bounce effect on the navbar */
+    padding: 10px 20px;
+    box-sizing: border-box;
+    z-index: 1000; /* Ensure navbar stays above other content */
 }
 
 .navbar a {
@@ -35,6 +38,11 @@ html, body {
 
 .navbar a:hover {
     background-color: #575757; /* Background color on hover */
+}
+
+/* Adding padding to prevent content from being hidden by the fixed navbar */
+body {
+    padding-top: 35px; /* Adjust this value based on the height of your navbar */
 }
 
 /* Center the login form and style inputs */
@@ -104,12 +112,13 @@ html, body {
 /* New index-specific container class */
 .index-container {
     width: 100%; /* Full width of parent */
-    max-width: 100%; /* Set maximum width for large screens */
+    max-width: 100vw; /* Set maximum width for large screens */
     margin: 0 auto; /* Center the container */
     padding: 0; /* Add horizontal padding */
     box-sizing: border-box; /* Include padding in the width calculation */
+    flex-direction: center;
     align-items: center;
-    overflow-y: auto;
+    overflow-x: hidden;
     min-height: 100vh; /* Allow content to fill viewport */
 }
 
@@ -687,6 +696,11 @@ section a.btn:hover {
 }
 
 @media (max-width: 480px) {
+
+    .homepage-links {
+        flex-direction: column;
+        padding: 10px;
+    }
     .login-container input,
     .login-container button {
         width: calc(100% - 12px);
